// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Adapter golden fixtures > anthropic > request fixtures > basic → canonical matches snapshot 1`] = `
{
  "config": {
    "maxTokens": 1024,
  },
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "claude-3-opus-20240229",
}
`;

exports[`Adapter golden fixtures > anthropic > request fixtures > multimodal → canonical matches snapshot 1`] = `
{
  "config": {
    "maxTokens": 1024,
  },
  "messages": [
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "image": {
            "data": "aW1hZ2VkYXRh",
            "mimeType": "image/png",
          },
          "type": "image",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-3-opus-20240229",
}
`;

exports[`Adapter golden fixtures > anthropic > request fixtures > params → canonical matches snapshot 1`] = `
{
  "config": {
    "maxTokens": 150,
    "stopSequences": [
      "END",
    ],
    "temperature": 0.7,
    "topK": 40,
    "topP": 0.9,
  },
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "claude-3-opus-20240229",
}
`;

exports[`Adapter golden fixtures > anthropic > request fixtures > system → canonical matches snapshot 1`] = `
{
  "config": {
    "maxTokens": 1024,
  },
  "messages": [
    {
      "content": "You are a helpful assistant",
      "role": "system",
    },
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "claude-3-opus-20240229",
  "systemPrompt": "You are a helpful assistant",
}
`;

exports[`Adapter golden fixtures > anthropic > request fixtures > tools → canonical matches snapshot 1`] = `
{
  "config": {
    "maxTokens": 1024,
  },
  "messages": [
    {
      "content": "What's the weather?",
      "role": "user",
    },
  ],
  "model": "claude-3-opus-20240229",
}
`;

exports[`Adapter golden fixtures > anthropic > response fixtures > basic → canonical matches snapshot 1`] = `
{
  "finishReason": "stop",
  "id": "msg_abc123",
  "message": {
    "content": "Hello! How can I help you?",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 8,
    "totalTokens": 18,
  },
}
`;

exports[`Adapter golden fixtures > anthropic > response fixtures > length → canonical matches snapshot 1`] = `
{
  "finishReason": "length",
  "id": "msg_def456",
  "message": {
    "content": "This response was truncated",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 150,
    "totalTokens": 160,
  },
}
`;

exports[`Adapter golden fixtures > anthropic > response fixtures > tool_use → canonical matches snapshot 1`] = `
{
  "finishReason": "tool_call",
  "id": "msg_ghi789",
  "message": {
    "content": "",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 20,
    "outputTokens": 12,
    "totalTokens": 32,
  },
}
`;

exports[`Adapter golden fixtures > gemini > request fixtures > basic → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "gemini-pro",
}
`;

exports[`Adapter golden fixtures > gemini > request fixtures > multimodal → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "image": {
            "data": "aW1hZ2VkYXRh",
            "mimeType": "image/png",
          },
          "type": "image",
        },
      ],
      "role": "user",
    },
  ],
  "model": "gemini-pro",
}
`;

exports[`Adapter golden fixtures > gemini > request fixtures > params → canonical matches snapshot 1`] = `
{
  "config": {
    "candidateCount": 2,
    "maxTokens": 150,
    "stopSequences": [
      "END",
    ],
    "temperature": 0.7,
    "topK": 40,
    "topP": 0.9,
  },
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "gemini-pro",
}
`;

exports[`Adapter golden fixtures > gemini > request fixtures > system → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "gemini-pro",
  "systemPrompt": "You are a helpful assistant",
}
`;

exports[`Adapter golden fixtures > gemini > request fixtures > tools → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": "What's the weather?",
      "role": "user",
    },
  ],
  "model": "gemini-pro",
}
`;

exports[`Adapter golden fixtures > gemini > response fixtures > basic → canonical matches snapshot 1`] = `
{
  "finishReason": "stop",
  "id": "<generated>",
  "message": {
    "content": "Hello! How can I help you?",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 8,
    "totalTokens": 18,
  },
}
`;

exports[`Adapter golden fixtures > gemini > response fixtures > length → canonical matches snapshot 1`] = `
{
  "finishReason": "length",
  "id": "<generated>",
  "message": {
    "content": "This response was truncated",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 150,
    "totalTokens": 160,
  },
}
`;

exports[`Adapter golden fixtures > gemini > response fixtures > safety → canonical matches snapshot 1`] = `
{
  "finishReason": "content_filter",
  "id": "<generated>",
  "message": {
    "content": "",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 0,
    "totalTokens": 10,
  },
}
`;

exports[`Adapter golden fixtures > ollama > request fixtures > basic → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "llama3",
}
`;

exports[`Adapter golden fixtures > ollama > request fixtures > multimodal → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "image": {
            "data": "aW1hZ2VkYXRh",
            "mimeType": "image/png",
          },
          "type": "image",
        },
      ],
      "role": "user",
    },
  ],
  "model": "llava",
}
`;

exports[`Adapter golden fixtures > ollama > request fixtures > params → canonical matches snapshot 1`] = `
{
  "config": {
    "maxTokens": 150,
    "seed": 42,
    "stopSequences": [
      "END",
    ],
    "temperature": 0.7,
    "topK": 40,
    "topP": 0.9,
  },
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "llama3",
}
`;

exports[`Adapter golden fixtures > ollama > request fixtures > stream → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "llama3",
  "stream": true,
}
`;

exports[`Adapter golden fixtures > ollama > request fixtures > system → canonical matches snapshot 1`] = `
{
  "messages": [
    {
      "content": "You are a helpful assistant",
      "role": "system",
    },
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "llama3",
  "systemPrompt": "You are a helpful assistant",
}
`;

exports[`Adapter golden fixtures > ollama > response fixtures > basic → canonical matches snapshot 1`] = `
{
  "finishReason": "stop",
  "id": "<generated>",
  "message": {
    "content": "Hello! How can I help you?",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 8,
    "totalTokens": 18,
  },
}
`;

exports[`Adapter golden fixtures > ollama > response fixtures > length → canonical matches snapshot 1`] = `
{
  "finishReason": "stop",
  "id": "<generated>",
  "message": {
    "content": "This response was truncated",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 150,
    "totalTokens": 160,
  },
}
`;

exports[`Adapter golden fixtures > openai > request fixtures > basic → canonical matches snapshot 1`] = `
{
  "config": {},
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "gpt-4",
}
`;

exports[`Adapter golden fixtures > openai > request fixtures > multimodal → canonical matches snapshot 1`] = `
{
  "config": {},
  "messages": [
    {
      "content": [
        {
          "text": "What is in this image?",
          "type": "text",
        },
        {
          "image": {
            "data": "aW1hZ2VkYXRh",
            "mimeType": "image/png",
          },
          "type": "image",
        },
      ],
      "role": "user",
    },
  ],
  "model": "gpt-4o",
}
`;

exports[`Adapter golden fixtures > openai > request fixtures > params → canonical matches snapshot 1`] = `
{
  "config": {
    "candidateCount": 2,
    "frequencyPenalty": 0.2,
    "maxTokens": 150,
    "presencePenalty": 0.1,
    "seed": 42,
    "stopSequences": [
      "END",
    ],
    "temperature": 0.7,
    "topP": 0.9,
  },
  "messages": [
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "gpt-4",
}
`;

exports[`Adapter golden fixtures > openai > request fixtures > system → canonical matches snapshot 1`] = `
{
  "config": {},
  "messages": [
    {
      "content": "You are a helpful assistant",
      "role": "system",
    },
    {
      "content": "Hello",
      "role": "user",
    },
  ],
  "model": "gpt-4",
  "systemPrompt": "You are a helpful assistant",
}
`;

exports[`Adapter golden fixtures > openai > request fixtures > tools → canonical matches snapshot 1`] = `
{
  "config": {},
  "messages": [
    {
      "content": "What's the weather?",
      "role": "user",
    },
  ],
  "model": "gpt-4",
}
`;

exports[`Adapter golden fixtures > openai > response fixtures > basic → canonical matches snapshot 1`] = `
{
  "created": 1700000000,
  "finishReason": "stop",
  "id": "chatcmpl-abc123",
  "message": {
    "content": "Hello! How can I help you?",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 8,
    "totalTokens": 18,
  },
}
`;

exports[`Adapter golden fixtures > openai > response fixtures > length → canonical matches snapshot 1`] = `
{
  "created": 1700000000,
  "finishReason": "length",
  "id": "chatcmpl-def456",
  "message": {
    "content": "This response was truncated because it reached",
    "role": "assistant",
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 10,
    "outputTokens": 150,
    "totalTokens": 160,
  },
}
`;

exports[`Adapter golden fixtures > openai > response fixtures > tool_call → canonical matches snapshot 1`] = `
{
  "created": 1700000000,
  "finishReason": "tool_call",
  "id": "chatcmpl-ghi789",
  "message": {
    "content": "",
    "role": "assistant",
    "toolCalls": [
      {
        "function": {
          "arguments": "{"location":"Paris"}",
          "name": "get_weather",
        },
        "id": "call_xyz",
        "type": "function",
      },
    ],
  },
  "model": "test-model",
  "usage": {
    "inputTokens": 20,
    "outputTokens": 12,
    "totalTokens": 32,
  },
}
`;
